--- a/dvc.yaml
+++ b/dvc.yaml
@@ -3,13 +3,14 @@ stages:
     cmd: ./week02_management_and_testing/homework/load_dataset.py
     deps:
       - week02_management_and_testing/homework/load_dataset.py
-      # - configs/dataset/cifar10.yaml
+      - conf/dataset/cifar10.yaml
     outs:
       - cifar10/
   train:
     cmd: ./week02_management_and_testing/homework/train.py
     deps:
       - cifar10/
+      - conf/train/default_loop.yaml
       - week02_management_and_testing/homework/train.py
       - week02_management_and_testing/homework/modeling/
       - week02_management_and_testing/homework/configs/
